--- a/main.css
+++ b/main.css
@@ -19,28 +19,32 @@
 }
 
 .card__tag {
-  background-color: color;
   padding: 5px;
+  min-width: 80px;
   width: 80px;
+  height: 20px;
   text-align: center;
   margin: 10px;
+  align-self: center;
+  color: white;
 }
 
 .card__description {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  flex-grow: 1;
+  margin: 0px 10px;
 }
 
 .card__description__title {
   font-weight: bold;
+  margin-bottom: 8px;
 }
 
 .card__date {
   align-self: center;
-  flex-grow: 1;
-  text-align: right;
-  padding-left: 40px;
+  min-width: 60px;
 }
 
 .dark_blue {
