--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: #EEEEEE;
+  background-color: #DDDDDD;
 }
 
 .card {
@@ -62,6 +62,7 @@
   margin: 10px;
   align-self: center;
   color: white;
+  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.14);
 }
 
 .card__description {
