--- a/main.css
+++ b/main.css
@@ -1,5 +1,11 @@
-.main {
+.page {
   margin: 0px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .header {
@@ -10,6 +16,7 @@
   top: 0;
   width: 100%;
   box-shadow: 0 4px 4px 0 rgba(0,0,0,0.14);
+  background-color: #5A6378;
 }
 
 .header--open {
@@ -41,6 +48,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-grow: 1;
+  background-color: #DDDDDD
 }
 
 .card {
@@ -95,6 +104,27 @@
   min-width: 70px;
 }
 
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  min-height: 50px;
+  text-align: center;
+  box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.14);
+  background-color: #5A6378;
+  padding: 10px;
+}
+
+.footer__description {
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #FFFFFF;
+}
+
+/* Color */
+
 .white_text {
   color: #FFFFFF;
 }
@@ -121,8 +151,4 @@
 
 .reddit_blue {
   background-color: #CEE3F8
-}
-
-.grey {
-  background-color: #DDDDDD
 }
