--- a/main.css
+++ b/main.css
@@ -67,8 +67,23 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   flex-grow: 1;
   background-color: #DDDDDD
+}
+
+.spinner {
+  border: 16px solid #FFFFFF;
+  border-top: 16px solid #5A6378;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 .card {
