--- a/main.css
+++ b/main.css
@@ -158,6 +158,45 @@
   color: #FFFFFF;
 }
 
+.error {
+  position: fixed;
+  right: 12px;
+  color: #FFFFFF;
+  width: 400px;
+  padding: 15px;
+  -webkit-filter: drop-shadow(0 8.4px 8.4px rgba(0, 0, 0, 0.25)) drop-shadow(0 6px 3px rgba(0, 0, 0, 0.22));
+  filter: drop-shadow(0 8.4px 8.4px rgba(0, 0, 0, 0.25)) drop-shadow(0 6px 3px rgba(0, 0, 0, 0.22));
+  background-image: linear-gradient(to bottom, #EE5F5B, #BD362F);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.error__content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 10px
+}
+
+.error__text {
+  font-weight: bold;
+  font-size: 1.15em;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.error__img {
+  height: 30px;
+  padding-right: 15px
+}
+
+.close {
+  font: 18px/100% arial, sans-serif;
+  text-shadow: 0 1px 0 #777777;
+  align-self: flex-start;
+  cursor: pointer;
+}
+
 /* Color */
 
 .black_text {
