--- a/main.css
+++ b/main.css
@@ -86,6 +86,10 @@
     100% { transform: rotate(360deg); }
 }
 
+.cards {
+  max-width: 1000px
+}
+
 .card {
   display: flex;
   flex-direction: row;
@@ -220,9 +224,16 @@
 }
 
 /* Responsive */
+
+@media all and (max-width: 1000px) {
+  .cards {
+    max-width: 100%;
+  }
+}
+
 @media all and (max-width: 900px) {
-  .header__description {
-    display: none;
+  .cards {
+    max-width: 100%;
   }
 }
 
