--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
 }
 
 .header {
@@ -17,7 +18,6 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
 }
 
 .header__description {
@@ -140,7 +140,7 @@
 
 .card__date {
   align-self: center;
-  min-width: 90px;
+  min-width: 110px;
 }
 
 .footer {
@@ -185,7 +185,6 @@
 
 .error__text {
   font-weight: bold;
-  font-size: 1.15em;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
@@ -199,6 +198,7 @@
   text-shadow: 0 1px 0 #777777;
   align-self: flex-start;
   cursor: pointer;
+  padding-left: 10px;
 }
 
 /* Color */
