Updated todos and fixed header description not disappearing for smaller windows

--- a/main.css
+++ b/main.css
@@ -239,8 +239,8 @@
 }
 
 @media all and (max-width: 900px) {
-  .cards {
-    max-width: 100%;
+  .header__description {
+    display: none;
   }
 }
 
