--- a/main.css
+++ b/main.css
@@ -9,6 +9,12 @@ a {
   text-decoration: none;
 }
 
+.not__found {
+   text-align: center;
+   font-size: 3em;
+   padding: 20px;
+}
+
 .internal__link {
   color: #5A6378;
   font-weight: bold;
