--- a/main.css
+++ b/main.css
@@ -118,15 +118,22 @@ a {
 
 .body {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
 
-.news__body {
-  padding: 10px;
+.home__body {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+}
+
+.newsletter__body {
+  display: flex;
+  justify-content: center;
 }
 
 .spinner {
