--- a/main.css
+++ b/main.css
@@ -39,81 +39,48 @@ a {
 
 .header {
   color: #FFFFFF;
-  padding: 10px 25px 15px 25px;
+  padding: 15px;
   box-shadow: 0 4px 4px 0 rgba(0,0,0,0.14);
   background-color: #5A6378;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   align-items: center;
 }
 
-.header__description {
-  padding-left: 25px;
-  padding-right: 25px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.header__logo, .header__controls {
+  flex: 1 0 300px;
+}
+
+.header__title {
   margin: 0px;
 }
 
-.header__right {
+.header__controls {
   display: flex;
-  flex-direction: row;
   align-items: center;
+  justify-content: flex-end;
 }
 
-.header__github {
+.header__control {
+  /*color: #FFFFFF;*/
+  cursor: pointer;
+  padding-left: 20px;
+}
+
+.header__control:hover {
+  opacity: 0.7;
+}
+
+.header__icon {
   height: 45px;
 }
 
-.header__twitter {
-  height: 50px;
-  padding-right: 20px;
-}
-
-.header__twitter:hover {
-  opacity: 0.7;
-}
-
-.header__top-news {
-  padding-left: 10px;
-  padding-right: 20px;
+.header__newsletters {
   text-align: center;
-  color: #FFFFFF;
-}
-
-.github {
-  cursor: pointer;
-}
-
-.github:hover {
-  opacity: 0.7;
+  font-weight: bold;
 }
 
 .logo {
-  display: flex;
-  flex-direction: row;
-}
-
-.logo__icon {
-  padding-top: 3px;
-  padding-right: 7px;
-}
-
-.logo__text {
-  display: flex;
-  flex-direction: column;
-}
-
-.logo_elm {
-  font-size: 1.6em;
-}
-
-.logo_news {
-  font-size: 1.1em;
-  line-height: 9px;
-  padding-left: 1px;
+  cursor: pointer;
 }
 
 .body {
