--- a/main.css
+++ b/main.css
@@ -25,6 +25,14 @@ a {
   color: #5A6378;
 }
 
+.center__spinner, .center__error {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-grow: 1;
+  align-items: center;
+}
+
 .page {
   margin: 0px;
 }
@@ -263,10 +271,16 @@ a {
   justify-content: center;
 }
 
+.newsletters {
+  display: flex;
+  flex-direction: column;
+}
+
 .newsletters__row {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-grow: 1;
   padding-bottom: 20px;
 }
 
@@ -284,12 +298,6 @@ a {
 .newsletters__file {
   font-size: 1.15em;
   padding-top: 10px;
-}
-
-.newsletters__spinner {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
 }
 
 .newsletter__header {
