--- a/main.css
+++ b/main.css
@@ -88,14 +88,17 @@ a {
 }
 
 .header__icon {
-  height: 45px;
+  height: 32px;
 }
 
 .header__newsletters {
   text-align: center;
   font-weight: bold;
 }
-
+#logo {
+  outline: inherit;
+  outline-width: 0;
+}
 .logo {
   cursor: pointer;
 }
@@ -219,16 +222,16 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  min-height: 50px;
+  align-items: center;
   text-align: center;
   box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.14);
   background-color: #5A6378;
-  padding: 10px;
+  padding: 15px;
 }
 
 .footer__description {
-  margin-left: 10px;
   display: flex;
+  flex: 1 1 auto;
   flex-direction: column;
   justify-content: center;
   color: #FFFFFF;
